--- a/index.html
+++ b/index.html
@@ -78,16 +78,10 @@
         $('#equal').click(function(){
             result();
         });
-        
-        
-
-
         </script>
     </head>
-
-
-
-    <body><div class="calc">
+    <body>
+        <div class="calc">
         <h1>Calculator</h1>
     </div>
         <div class="Calculator">
